<resources>
    <string name="app_name">Mundial Surf</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_edit_surfer">EditSurferActivity</string>
    <string name="title_activity_test">test</string>
    <string name="alert">Alert</string>
    <string name="unexpected">Unexpected error while processing the request</string>
    <string name="emptyFields">Please fill in the fields.</string>
    <string name="withoutSurfer">Please fill in the field with a surfer.</string>
    <string name="sameSurfers">Sorry, but the surfers are the same.</string>
    <string name="incorrectType">The field was filled in with an incorrect type.</string>
    <string name="ok">Ok</string>
    <string name="edit_surfer">Edit a Surfer</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
    <string name="create_hit">Create a New Hit</string>
    <string name="cancel">CANCEL</string>
    <string name="create_new_surfer">Create a New Surfer</string>
    <string name="create_new_score">Create a New Score</string>
    <string name="partial_score_1">Partial Score 1</string>
    <string name="partial_score_2">Partial Score 2</string>
    <string name="partial_score_3">Partial Score 3</string>
    <string name="score">SCORE</string>
    <string name="new_score">NEW SCORE</string>
    <string name="partial_one">Partial One</string>
    <string name="partial_two">Partial Two</string>
    <string name="partial_three">Partial Three</string>
    <string name="average">Average</string>
    <string name="wave_register">Wave Register</string>
    <string name="hit">Hit</string>
    <string name="surfer">Surfer</string>
    <string name="success">Success</string>
    <string name="data_error">DATABASE ERROR</string>
    <string name="surfer_menu">Surfers Register</string>
    <string name="hit_menu">Hit\nRegister</string>
</resources>
