<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2">

            <ImageView
                android:layout_height="150dp"
                android:layout_marginTop="60dp"
                android:src="@drawable/ic_surfer_woman"/>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/create_new_score"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textColor="@color/colorLightGreen"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/chooseSurfer"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/db_gradient_edit" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/noteOneEditText"
                    android:layout_height="50dp"
                    android:layout_width="350dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:hint="@string/partial_score_1"
                    android:inputType="numberDecimal"
                    android:background="@drawable/db_gradient_edit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/noteTwoEditText"
                    android:layout_height="50dp"
                    android:layout_width="350dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:hint="@string/partial_score_2"
                    android:inputType="numberDecimal"
                    android:background="@drawable/db_gradient_edit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/noteThreeEditText"
                    android:layout_height="50dp"
                    android:layout_width="350dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:hint="@string/partial_score_3"
                    android:inputType="numberDecimal"
                    android:background="@drawable/db_gradient_edit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/save"
                    android:background="@drawable/db_gradient_button"
                    android:layout_height="wrap_content"
                    android:layout_width="250dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textAlignment="center"/>
            </LinearLayout>
        </TableLayout>
    </ScrollView>
</LinearLayout>