<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RecyclerViewActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/main_line_view">

    </android.support.v7.widget.RecyclerView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="clickOnNewSurfers"
        android:layout_gravity="bottom"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        app:srcCompat="@android:drawable/ic_input_add" />

</FrameLayout>